[gd_scene load_steps=15 format=3 uid="uid://pw8tvjcusgok"]

[ext_resource type="Script" uid="uid://bnhwar6no7cae" path="res://Scripts/UI/HUD.gd" id="1_omqfp"]
[ext_resource type="LabelSettings" uid="uid://b8tlir45d4qoa" path="res://Assets/HUD.tres" id="2_qc5w2"]

[sub_resource type="Gradient" id="Gradient_omqfp"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0, 0, 0, 0.392157)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qc5w2"]
gradient = SubResource("Gradient_omqfp")
fill_from = Vector2(1, 0)

[sub_resource type="Gradient" id="Gradient_qc5w2"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1.44392e-06, 0.61188, 0.618822, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_xaom8"]
gradient = SubResource("Gradient_qc5w2")

[sub_resource type="Gradient" id="Gradient_xaom8"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0, 0, 0, 0.392157)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_4bm6u"]
gradient = SubResource("Gradient_xaom8")

[sub_resource type="Gradient" id="Gradient_ykvyr"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 0.0823529, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_lelo4"]
gradient = SubResource("Gradient_ykvyr")

[sub_resource type="Gradient" id="Gradient_stamina"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 0.85, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_stamina"]
gradient = SubResource("Gradient_stamina")

[sub_resource type="Gradient" id="Gradient_special"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.58, 0.3, 0.9, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_special"]
gradient = SubResource("Gradient_special")

[node name="Hud" type="CanvasLayer" groups=["hud"]]
script = ExtResource("1_omqfp")

[node name="XpBar" type="TextureProgressBar" parent="."]
z_index = 2
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.046
offset_bottom = 0.319996
grow_horizontal = 2
nine_patch_stretch = true
texture_under = SubResource("GradientTexture2D_qc5w2")
texture_progress = SubResource("GradientTexture2D_xaom8")

[node name="SpecialBar" type="TextureProgressBar" parent="."]
z_index = 2
anchors_preset = -1
anchor_top = 0.046
anchor_right = 1.0
anchor_bottom = 0.07
offset_top = 0.0
grow_horizontal = 2
nine_patch_stretch = true
texture_under = SubResource("GradientTexture2D_qc5w2")
texture_progress = SubResource("GradientTexture1D_special")

[node name="HpBar" type="TextureProgressBar" parent="."]
anchors_preset = -1
anchor_top = 0.981
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.519897
grow_horizontal = 2
grow_vertical = 0
nine_patch_stretch = true
texture_under = SubResource("GradientTexture1D_4bm6u")
texture_progress = SubResource("GradientTexture1D_lelo4")

[node name="StaminaBar" type="TextureProgressBar" parent="."]
anchors_preset = -1
anchor_top = 0.955
anchor_right = 1.0
anchor_bottom = 0.981
grow_horizontal = 2
grow_vertical = 0
nine_patch_stretch = true
texture_under = SubResource("GradientTexture1D_4bm6u")
texture_progress = SubResource("GradientTexture1D_stamina")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchor_top = 0.046
anchor_right = 1.0
anchor_bottom = 0.088
offset_top = 0.319996
offset_bottom = -0.0400085
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.36
anchor_right = 1.0
anchor_bottom = 1.36
offset_top = 16.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="LevelLabel" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Level : 1"
label_settings = ExtResource("2_qc5w2")
uppercase = true

[node name="TimerLabel" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 80
text = "00"
label_settings = ExtResource("2_qc5w2")
horizontal_alignment = 1

[node name="KillsLabel" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Kills : 00"
label_settings = ExtResource("2_qc5w2")
horizontal_alignment = 2
uppercase = true
